--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,3 +1,11 @@
+/* Main container flex layout for desktop/tablet */
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+}
+
 /* Additional responsive utilities */
 
 .list-wrapper,
@@ -6,12 +14,20 @@
   display: flex;
   height: 100%;
 }
+.chat-wrapper {
+  flex: 1 1 0%;
+  width: 100%;
+  min-width: 0;
+}
 
 @media (max-width: 768px) {
   /* Mobile-specific adjustments */
   .container {
+    display: block;
     flex-direction: row;
     position: relative;
+    height: 100vh;
+    width: 100vw;
   }
 
   .list-wrapper,
